--- a/action.yml
+++ b/action.yml
@@ -57,9 +57,9 @@ runs:
       run: |
         pip3 install -U pip wheel
         pip3 install west
-        if [ "${{ runner.os }}" == "Linux" ]; then
+        if [ "${{ runner.os }}" = "Linux" ]; then
           sudo apt-get install ninja-build ccache
-        elif [ "${{ runner.os }}" == "macOS" ]; then
+        elif [ "${{ runner.os }}" = "macOS" ]; then
           brew install ninja ccache
         fi
 
