--- a/action.yml
+++ b/action.yml
@@ -39,18 +39,33 @@ runs:
           sdk_variant="macos-x86_64"
         elif [ "$runner" = "macOS-ARM64" ]; then
           sdk_variant="macos-aarch64"
+        elif [ "$runner" = "Windows-X64" ]; then
+          sdk_variant="windows-x86_64"
         else
           echo "Unsupported runner platform: $runner"
         fi
 
-        if [ "runner.os" = "Linux" ]; then
+        if [ "${{ runner.os }}" = "Linux" ]; then
           pip_cache_path="~/.cache/pip"
-        elif [ "runner.os" = "macOS" ]; then
+          sdk_ext="tar.xz"
+          setup_file="./setup.sh"
+          setup_opt="-"
+        elif [ "${{ runner.os }}" = "macOS" ]; then
           pip_cache_path="~/Library/Caches/pip"
+          sdk_ext="tar.xz"
+          setup_file="./setup.sh"
+          setup_opt="-"
+        elif [ "${{ runner.os }}" = "Windows" ]; then
+          pip_cache_path="~\AppData\Local\pip\Cache"
+          sdk_ext="7z"
+          setup_file="./setup.cmd"
+          setup_opt="//"
         fi
 
-        echo "SDK_FILE=zephyr-sdk-${{ inputs.sdk-version }}_${sdk_variant}_minimal.tar.xz" >> $GITHUB_ENV
+        echo "SDK_FILE=zephyr-sdk-${{ inputs.sdk-version }}_${sdk_variant}_minimal.${sdk_ext}" >> $GITHUB_ENV
         echo "PIP_CACHE_PATH=${pip_cache_path}" >> $GITHUB_ENV
+        echo "SETUP_FILE=${setup_file}" >> $GITHUB_ENV
+        echo "SETUP_OPT=${setup_opt}" >> $GITHUB_ENV
 
     - name: Install dependencies
       shell: bash
@@ -61,6 +76,10 @@ runs:
           sudo apt-get install ninja-build ccache
         elif [ "${{ runner.os }}" = "macOS" ]; then
           brew install ninja ccache
+        elif [ "${{ runner.os }}" = "Windows" ]; then
+          choco feature enable -n allowGlobalConfirmation
+          choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
+          choco install ninja wget 7zip
         fi
 
     - name: Cache Zephyr SDK
@@ -75,8 +94,13 @@ runs:
       shell: bash
       run: |
         wget --progress=dot:giga ${{ inputs.sdk-base }}/v${{ inputs.sdk-version }}/$SDK_FILE
-        mkdir zephyr-sdk
-        tar xvf $SDK_FILE -C zephyr-sdk --strip-components=1
+        if [ "${{ runner.os }}" = "Windows" ]; then
+          7z x $SDK_FILE
+          mv zephyr-sdk-${{ inputs.sdk-version }} zephyr-sdk
+        else
+          mkdir zephyr-sdk
+          tar xvf $SDK_FILE -C zephyr-sdk --strip-components=1
+        fi
 
     - name: Setup Zephyr SDK
       working-directory: zephyr-sdk
@@ -85,12 +109,12 @@ runs:
         IFS=":"
         TOOLCHAINS="${{ inputs.toolchains }}"
         for toolchain in $TOOLCHAINS; do
-            ./setup.sh -t $toolchain
+            ${SETUP_FILE} ${SETUP_OPT}t $toolchain
         done
         if [ ! -d sysroots ]; then
-            ./setup.sh -h
+            ${SETUP_FILE} ${SETUP_OPT}h
         fi
-        ./setup.sh -c
+        ${SETUP_FILE} ${SETUP_OPT}c
 
     - name: Initialize
       shell: bash
